# aihero-faq-agent

./: 7-Day AI Agents Email Crash-Course.ipynb  README.md  README.md.txt  faq_agent_app.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  evidently_ai_sections-checkpoint.json  log-checkpoint.json
logs/: 20250930_152048.json  20250930_152136.json  20250930_152226.json  docs_agent_20250930_152313_495ae2.json  docs_agent_20250930_152635_777980.json  faq_agent_v2_20250930_155604_7c2355.json  faq_agent_v2_20250930_155636_d26cbb.json  faq_agent_v2_20250930_155655_d85c5f.json  faq_agent_v2_20250930_161124_9b9069.json  faq_agent_v2_20250930_163203_41db10.json  faq_agent_v2_20250930_163322_f1040e.json
storage/faq_index/: default__vector_store.json  docstore.json  index_store.json
